Simple jobs stats

--- a/client/views/builds.erb
+++ b/client/views/builds.erb
@@ -8,6 +8,8 @@ $(function() {
 })
 </script>
 
+<div class="well">Jobs in queue: <%= @jobs_stats.enqueued %></div>
+
 <table class="table">
   <thead>
     <th>Build target</th>
