--- a/lib/rails-perf/templates/gemfile.erb
+++ b/lib/rails-perf/templates/gemfile.erb
@@ -2,4 +2,4 @@ source "https://rubygems.org"
 <% @gems.each do |g| %>
 gem "<%= g.name %>"<% if g.version_and_source? %>, <%= g.version_and_source %><% end %><% end %>
 
-gem "benchmark-ips", github: "kirs/benchmark-ips"
+gem "benchmark-ips", github: "kirs/benchmark-ips", branch: "quiet-mode"
