--- a/client/views/build_not_ready.erb
+++ b/client/views/build_not_ready.erb
@@ -1,3 +1,3 @@
 <div class="well">
-  <p>Build <a href="<%= @build.github_url %>" target="_blank"><%= @build.tag %></a> was enqued and will be ready in few minutes.</p>
+  <p>Rails commit <a href="<%= @build.github_url %>" target="_blank"><%= @build.tag %></a> was enqued to benchmark and will be ready in few minutes.</p>
 </div>
