--- a/client/views/layout.erb
+++ b/client/views/layout.erb
@@ -66,9 +66,9 @@ $(function() {
 
       <form class="navbar-form navbar-right js-jump-to-ref-form" target="/builds/jump">
         <div class="form-group">
-          <input name="ref" type="text" class="form-control" placeholder="Benchmark Rails ref">
+          <input name="ref" type="text" class="form-control" placeholder="Rails commit ref">
         </div>
-        <button type="submit" class="btn btn-default">New build</button>
+        <button type="submit" class="btn btn-default">New benchmark</button>
       </form>
     </div>
   </nav>
