--- a/client/views/layout.erb
+++ b/client/views/layout.erb
@@ -19,6 +19,7 @@
   width: 300px;
   height: 400px;
   display: inline-block;
+  margin-bottom: 50px;
 }
 .chart .chart-label {
   text-align: center;
