--- a/client/views/build.erb
+++ b/client/views/build.erb
@@ -19,7 +19,7 @@ $(function() {
 <% if @build.ref.present? %>
 <p>Commit: <a href="<%= @build.github_commit.html_url %>"><%= @build.commit.message %></a></p>
 <% end %>
-<p><a href="javascript:;" class="js-show-gemfile">Target Gemfile</a> | <a href="https://github.com/kirs/rails-perf/tree/master/benchmarks" class="js-show-gemfile">Benchmarks code</a></p>
+<p><a href="javascript:;" class="js-show-gemfile">Target Gemfile</a> | <a href="https://github.com/kirs/rails-perf/tree/master/benchmarks">Benchmarks code</a></p>
 
 <div class="well">
   <ul class="nav nav-tabs">
