--- a/client/views/layout.erb
+++ b/client/views/layout.erb
@@ -65,12 +65,12 @@ $(function() {
         <li class="<% if @current_tab == :about %>active<% end %>"><a href="/about">About</a></li>
       </ul>
 
-      <form class="navbar-form navbar-right js-jump-to-ref-form" target="/builds/jump">
+      <!-- <form class="navbar-form navbar-right js-jump-to-ref-form" target="/builds/jump">
         <div class="form-group">
           <input name="ref" type="text" class="form-control" placeholder="Rails commit ref">
         </div>
         <button type="submit" class="btn btn-default">New benchmark</button>
-      </form>
+      </form> -->
     </div>
   </nav>
 
