--- a/client/views/about.erb
+++ b/client/views/about.erb
@@ -1,3 +1,4 @@
 <div class="well">
   <p>RailsPerf was created to track Rails performance by commit and to compare performance stats between releases.</p>
+  <p><a href="https://github.com/kirs/rails-perf/blob/master/README.md"><strong>Check the README for more details</strong></a></p>
 </div>
