--- a/client/views/global.erb
+++ b/client/views/global.erb
@@ -2,6 +2,8 @@
 <%= @reports.to_json %>
 </script>
 
+<p>Overall Rails performance throught major versions.</p>
+
 <div class="well">
   <ul class="nav nav-tabs">
     <% @components.each do |name| %>
